# Sahayak

./: .gitignore  pyproject.toml
agents/quiz_gen_agent/: quiz_gen_agent.py
tools/: ocr_engine.py  stt_engine.py  tts_engine.py
